--- a/chat-app-react-nodejs-master/server/.env.example
+++ b/chat-app-react-nodejs-master/server/.env.example
@@ -1,2 +1,1 @@
-PORT=5000
-MONGO_URL="mongodb://localhost:27017/chat"
+MONGODB_URI=mongodb+srv://admin:admin3018@clusterchatapp.ckdix.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=ClusterChatApp
