--- a/chat-app-react-nodejs-master/server/.env.example
+++ b/chat-app-react-nodejs-master/server/.env.example
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://admin:admin3018@clusterchatapp.ckdix.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=ClusterChatApp
+MONGO_URL=mongodb+srv://admin:admin3018@clusterchatapp.ckdix.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=ClusterChatApp
