--- a/chat-app-react-nodejs-master/server/.env
+++ b/chat-app-react-nodejs-master/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://admin:admin3018@clusterchatapp.ckdix.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=ClusterChatApp
+PORT=5000  # or any port number you want to use
